<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/finalbgsighnup"
    tools:context=".signup">

    <!--    <ScrollView-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintHorizontal_bias="0.5"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintVertical_bias="0.5">-->

    <!--        <androidx.constraintlayout.widget.ConstraintLayout-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:paddingLeft="@dimen/_16sdp"-->
    <!--            android:paddingTop="@dimen/_16sdp"-->
    <!--            android:paddingRight="@dimen/_16sdp"-->
    <!--            android:paddingBottom="@dimen/_16sdp">-->


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_7sdp"

        android:fontFamily="@font/bentham"
        android:text="Already have an account?"
        android:textSize="@dimen/_13sdp"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.744"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/login_here"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_4sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:text="@string/login_here"
        android:onClick="ligin_here"
        android:clickable="true"
        android:contextClickable="true"
        android:fontFamily="@font/bentham"
        android:textSize="@dimen/_13sdp"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="@dimen/_280sdp"
        android:layout_height="@dimen/_53sdp"
        android:layout_marginTop="@dimen/_135sdp"
        android:fontFamily="@font/jost_extrabold"
        android:gravity="center"
        android:text="@string/msg"

        android:textSize="@dimen/_15sdp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.081" />

    <EditText
        android:id="@+id/IPname"
        android:layout_width="@dimen/_270sdp"
        android:layout_height="@dimen/_33sdp"
        android:layout_marginTop="@dimen/_47sdp"
        android:background="@drawable/d"
        android:backgroundTint="#DCE2DF"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingStart="6dp"
        android:paddingEnd="6dp"
        android:textColor="@color/black"
        android:textSize="@dimen/_13sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/titleName"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_20sdp"
        android:text="@string/full_name"
        android:fontFamily="@font/bentham"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintBottom_toTopOf="@+id/IPname"
        app:layout_constraintEnd_toEndOf="@+id/IPname"
        app:layout_constraintHorizontal_bias="0.008"
        app:layout_constraintStart_toStartOf="@+id/IPname"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/signup"
        android:layout_width="@dimen/_130sdp"
        android:layout_height="@dimen/_48sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:backgroundTint="#005980"
        android:fontFamily="@font/jost_bold"
        android:text="@string/sign_up"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/_20sdp"
        app:cornerRadius="@dimen/_15sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/IPpass" />


    <EditText
        android:id="@+id/IPemail"
        android:layout_width="@dimen/_270sdp"
        android:layout_height="@dimen/_33sdp"
        android:layout_marginTop="@dimen/_22sdp"
        android:background="@drawable/d"
        android:backgroundTint="#DCE2DF"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:paddingStart="6dp"
        android:textColor="@color/black"
        android:textSize="@dimen/_13sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/IPmobile" />

    <TextView
        android:id="@+id/titleEmail"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_20sdp"
        android:text="@string/email"
        android:fontFamily="@font/bentham"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintBottom_toTopOf="@+id/IPemail"
        app:layout_constraintEnd_toEndOf="@+id/IPemail"
        app:layout_constraintHorizontal_bias="0.003"
        app:layout_constraintStart_toStartOf="@+id/IPemail"
        app:layout_constraintTop_toBottomOf="@+id/IPmobile"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/titleMob"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_20sdp"
        android:text="@string/mobile_no"
        android:fontFamily="@font/bentham"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintBottom_toTopOf="@+id/IPmobile"
        app:layout_constraintEnd_toEndOf="@+id/IPmobile"
        app:layout_constraintHorizontal_bias="0.008"
        app:layout_constraintStart_toStartOf="@+id/IPmobile"
        app:layout_constraintTop_toBottomOf="@+id/IPname"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/IPmobile"
        android:layout_width="@dimen/_270sdp"
        android:layout_height="@dimen/_33sdp"
        android:layout_marginTop="@dimen/_22sdp"
        android:autofillHints=""
        android:textColor="@color/black"
        android:background="@drawable/d"
        android:backgroundTint="#DCE2DF"
        android:ems="10"
        android:inputType="numberDecimal"
        android:paddingStart="6dp"

        android:textSize="@dimen/_13sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/IPname" />


    <TextView
        android:id="@+id/or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_3sdp"
        android:fontFamily="@font/gotu"
        android:text="OR"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/signup"
        app:layout_constraintStart_toStartOf="@+id/signup"
        app:layout_constraintTop_toBottomOf="@+id/signup"
        app:layout_constraintVertical_bias="0.023" />

    <TextView
        android:id="@+id/titlePass"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_20sdp"
        android:text="@string/password"
        android:fontFamily="@font/bentham"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintBottom_toTopOf="@+id/IPpass"
        app:layout_constraintEnd_toEndOf="@+id/IPpass"
        app:layout_constraintHorizontal_bias="0.008"
        app:layout_constraintStart_toStartOf="@+id/IPpass"
        app:layout_constraintTop_toBottomOf="@+id/IPemail"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/IPpass"
        android:layout_width="@dimen/_270sdp"
        android:layout_height="@dimen/_33sdp"
        android:layout_marginTop="@dimen/_22sdp"
        android:background="@drawable/d"
        android:backgroundTint="#DCE2DF"
        android:ems="10"
        android:inputType="textPassword"
        android:paddingStart="6dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/IPemail" />

    <!--    <LinearLayout-->
    <!--        android:id="@+id/linearLayout5"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginTop="@dimen/_13sdp"-->
    <!--        android:layout_marginRight="@dimen/_2sdp"-->
    <!--        app:layout_constraintEnd_toStartOf="@+id/or"-->
    <!--        app:layout_constraintHorizontal_bias="1.0"-->
    <!--        app:layout_constraintStart_toStartOf="@+id/signup"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/signup">-->


    <!--    </LinearLayout>-->

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_28sdp"
        android:layout_marginTop="@dimen/_35sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup"
        app:srcCompat="@drawable/googleg_standard_color_18" />

    <View
        android:id="@+id/view2"
        android:layout_width="@dimen/_70sdp"
        android:layout_height="@dimen/_1sdp"
        android:layout_marginTop="@dimen/_18sdp"
        android:layout_marginEnd="@dimen/_2sdp"
        android:background="#000000"
        app:layout_constraintEnd_toStartOf="@+id/or"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/signup"
        app:layout_constraintTop_toBottomOf="@+id/signup" />

    <View
        android:id="@+id/view"
        android:layout_width="@dimen/_70sdp"
        android:layout_height="@dimen/_1sdp"
        android:layout_marginStart="@dimen/_2sdp"
        android:layout_marginTop="@dimen/_18sdp"
        android:background="#000000"
        app:layout_constraintEnd_toEndOf="@+id/signup"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/or"
        app:layout_constraintTop_toBottomOf="@+id/signup" />

</androidx.constraintlayout.widget.ConstraintLayout>
    <!--    </ScrollView>-->
    <!--</androidx.constraintlayout.widget.ConstraintLayout>-->